--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.4",
+    "@pbe/react-yandex-maps": "^1.2.5",
     "@reduxjs/toolkit": "^2.6.1",
+    "@yandex/ymaps3-types": "^1.0.17959420",
     "axios": "^1.8.4",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
