--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "@yandex/ymaps3-types": "^1.0.17959420",
     "axios": "^1.8.4",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.23.24",
     "next": "14.2.5",
     "react": "^18",
+    "react-calendar": "^6.0.0",
+    "react-day-picker": "^9.11.1",
     "react-dom": "^18",
     "react-redux": "^9.2.0",
     "sass": "^1.77.8",
@@ -31,6 +34,7 @@
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-calendar": "^3.9.0",
     "@types/react-dom": "^18",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
